2007-06-27  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/misc.c (iso_alloc):  Set p_count to zero when structure is
	initialized.

2007-06-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Avoid a compiler warning about null bytes in a
	format statement.

2007-06-26  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp (wxt_update_size, wxtFrame::wxtFrame):
	* src/wxterminal/wxt_term.h:
	* term/wxt.trm:
	Add option to set the window size: 'set term wxt size width,height'

2007-06-22  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc:  Make sure a line beginning with a number
	(i.e. a section heading) is followed immediately by a parallel entry
	beginning with '?'.  Not applied in the NEWS section, however.
	Bug #1655632

	*docs/gnuplot.texi: Sync to current doc file.

	* src/internal.c (f_sprintf): Apply LC_NUMERIC setting to all strings
	created via a call to sprintf during expression evaluation.
	Bug #1740017

2007-06-22  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/plot.c (inter): Cleanup: Use bail_to_command_line() instead of
	LONGJMP directly.

2007-06-21  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/graph3d.h: Remove fields 'ticslevel' and 'xyplane_z' from 
	struct t_xyplane; replaceboth with 'z'.

	* src/tables.h src/tables.c:  Added S_XYPLANE to better distinguish
	between "set xyplane" and "set ticslevel", i.e., no need to move
	token backward.

	* src/mouse.c src/save.c src/show.c src/unset.c:  Minor mods for
	variable name change and addition of S_XYPLANE.

	* src/set.c:  Broke set_ticslevel into set_ticslevel and set_xyplane.

	* src/graph3d.c: Fixed bug with drawing xyplane and z-axis line.
	Bug #1488168

2007-06-21  Ethan Merritt  <merritt@u.washington.edu>

	Fix two special cases where gnuplot auto-increments the line type, but
	does not check whether the user has requested user-defined line styles
	instead (via "set style increment user").
