@@ -1,3 +1,12 @@
+2007-06-29  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/axis.c (load_range): Revert change of 2004-03-15. This means
+	that we do *not* clear the RANGE_REVERSE flag, even after applying the
+	reversal. This is necessary for the upcoming "refresh" support, but
+	also fixes a current bug:   
+	set xrange [*:*] reverse; plot <foo>;  <zoom; zoom; unzoom>
+	flag is now clear, and subsequent plots are drawn backwards
+
 2007-06-27  Daniel Sebald  <daniel.sebald@ieee.org>
 
 	* src/misc.c (iso_alloc):  Set p_count to zero when structure is
